--- a/components/Thumbnail/index.module.css
+++ b/components/Thumbnail/index.module.css
@@ -1,13 +1,22 @@
-.thumbnail {
+.detail {
   width: 640px;
   height: auto;
   margin-bottom: 24px;
 }
+.list {
+  width: 240px;
+  height: auto;
+}
 
 @media (max-width: 640px) {
-  .thumbnail {
+  .detail {
     width: 100%;
     height: auto;
     margin-bottom: 40px;
+  }
+  .list {
+    width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
   }
 }
