--- a/components/ArticleListItem/index.module.css
+++ b/components/ArticleListItem/index.module.css
@@ -1,24 +1,11 @@
 .list {
-  margin-bottom: 40px;
-}
-
-.link {
-  display: flex;
-  gap: 40px;
+  margin-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .title {
-  font-size: 1.6rem;
+  font-size: 15px;
   font-weight: bold;
   margin-bottom: 0.5rem;
-}
-
-@media (max-width: 640px) {
-  .link {
-    display: block;
-  }
-
-  .title {
-    font-size: 1.4rem;
-  }
 }
