--- a/components/Pagination/index.module.css
+++ b/components/Pagination/index.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 24px;
-  margin-top: 24px;
+  /* margin-top: 24px; */
 }
 .list {
   margin: 0 4px;
