トップ画面css調整

--- a/components/Thumbnail/index.module.css
+++ b/components/Thumbnail/index.module.css
@@ -6,6 +6,10 @@
 .list {
   width: 240px;
   height: auto;
+  border-radius: 10px;
+}
+.list:hover {
+  opacity: 50%;
 }
 
 @media (max-width: 640px) {
