--- a/components/Profile/index.module.css
+++ b/components/Profile/index.module.css
@@ -1,36 +1,54 @@
 .wrapper {
-  margin: 4rem 0;
   display: flex;
-  gap: 24px;
-  border-top: 1px solid var(--color-border-light);
-  padding-top: 2rem;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.icon {
-  display: block;
-  width: 96px;
-  height: 96px;
-  border-radius: 50%;
-  object-fit: cover;
+.h1 {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
-.content {
-  flex: 1;
+.h2 {
+  font-size: 28px;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
-.name {
-  font-size: 1rem;
-  font-weight: bold;
-  padding-bottom: 0.5rem;
+.h3 {
+  font-size: 18px;
+  text-align: left;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .profile {
-  font-size: 0.8rem;
+  margin-bottom: 30px;
 }
 
-@media (max-width: 640px) {
-  .icon {
-    width: 48px;
-    height: 48px;
+.publication {
+  margin-bottom: 10px;
+}
+
+.body p {
+  text-align: left;
+  margin-bottom: 1em;
+}
+
+.body a {
+  text-decoration: underline;
+}
+
+.body ul {
+  padding-left: 2em;
+  margin-bottom: 10px;
+  list-style-type: square;
+}
+
+@media (min-width: 640px) {
+  .body {
+    width: 540px;
   }
 }
