スマホ向けにCSS調整

--- a/components/Profile/index.module.css
+++ b/components/Profile/index.module.css
@@ -52,3 +52,17 @@
     width: 540px;
   }
 }
+
+@media (max-width: 540px) {
+  .h1 {
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .h2 {
+    font-size: 23px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+}
