--- a/app/globals.css
+++ b/app/globals.css
@@ -91,7 +91,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
+  background: rgba(55, 58, 71, 0.9);
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
@@ -103,7 +103,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* Wrapper for item list */
 .bm-item-list {
-  color: #b8b7ad;
+  color: #dadada;
   padding: 0.8em;
 }
 
