--- a/components/Article/index.module.css
+++ b/components/Article/index.module.css
@@ -51,7 +51,7 @@
 }
 
 .content {
-  width: 720px;
+  width: 640px;
 }
 
 .content *:first-child {
@@ -68,7 +68,7 @@
 .content > h2 {
   font-size: 1.6rem;
   font-weight: bold;
-  margin: 2.8em 0 1rem;
+  margin: 1em 0 1rem;
 }
 
 .content > h3 {
@@ -191,7 +191,13 @@
   padding: 1rem;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 700px) {
+  .content {
+    width: 90%;
+  }
+}
+
+@media (max-width: 540px) {
   .title {
     font-size: 1.5rem;
     margin-bottom: 0px;
