--- a/components/Profile/index.module.css
+++ b/components/Profile/index.module.css
@@ -8,7 +8,12 @@
 .h1 {
   font-size: 30px;
   text-align: center;
-  margin-bottom: 10px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.h1 span {
+  display: inline-block;
 }
 
 .h2 {
@@ -61,7 +66,8 @@
   .h1 {
     font-size: 25px;
     text-align: center;
-    margin-bottom: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
   .h2 {
