--- a/components/Header/index.module.css
+++ b/components/Header/index.module.css
@@ -1,13 +1,22 @@
 .header {
   padding: 16px 24px 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
   display: flex;
-  /* justify-content: center; */
 }
 
 .logo img {
   width: 160px;
   height: auto;
+}
+
+.burger {
+  display: flex;
+  align-items: center;
+  margin-right: -8px;
+  margin-top: -8px;
 }
