--- a/components/Profile/index.module.css
+++ b/components/Profile/index.module.css
@@ -9,11 +9,41 @@
   font-size: 30px;
   text-align: center;
   margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .h1 span {
   display: inline-block;
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.socialLink {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  text-decoration: none;
+  transition: opacity 0.2s ease;
+}
+
+.socialLink:hover {
+  opacity: 0.7;
+}
+
+.xIcon {
+  width: 16px;
+  height: 16px;
+}
+
+.handle {
+  font-size: 0.9rem;
+  color: #666;
+  font-weight: 500;
 }
 
 .h2 {
@@ -67,7 +97,7 @@
     font-size: 25px;
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
   }
 
   .h2 {
